syntax = "proto3";
package v1;
option go_package = "./proto;";

service PingOmetr {
  rpc GetFastest (GetFastestRequest) returns (GetResponse);
  rpc GetSlowest (GetSlowestRequest) returns (GetResponse);
  rpc GetSpecific (GetSpecificRequest) returns (GetResponse);
  rpc GetAdminData (GetAdminDataRequest) returns (GetAdminDataResponse);
}

message GetFastestRequest {
}

message GetSlowestRequest {
}

message GetSpecificRequest {
  string siteName = 1;
}

message GetResponse {
  int32 ping = 1;
  string site = 2;
  string error = 3;
}

message GetAdminDataRequest {}

message GetAdminDataResponse{
  int64 min = 1;
  int64 max = 2;
  int64 specific = 3;

}